fix: resolve recursive CTE quoting issue in JooqRepository for HSQLDB
Use DSL.unquotedName for CTE identifiers to avoid case-sensitivity
issues in HSQLDB MODE=PostgreSQL, where quoted identifiers are
case-sensitive but unquoted references are uppercased.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>