@@ -6,6 +6,7 @@ import org.myjtools.gherkinparser.GherkinParser;
 import org.myjtools.gherkinparser.elements.Examples;
 import org.myjtools.gherkinparser.elements.Feature;
 import org.myjtools.gherkinparser.elements.ScenarioOutline;
+import org.myjtools.gherkinparser.elements.Tagged;
 import org.myjtools.imconfig.Config;
 import org.myjtools.jexten.Extension;
 import org.myjtools.jexten.Inject;
@@ -15,6 +16,7 @@ import org.myjtools.openbbt.core.contributors.PlanAssembler;
 import org.myjtools.openbbt.core.plan.NodeType;
 import org.myjtools.openbbt.core.plan.PlanNode;
 import org.myjtools.openbbt.core.plan.PlanNodeID;
+import org.myjtools.openbbt.core.plan.TagExpression;
 import org.myjtools.openbbt.core.util.Log;
 import java.io.IOException;
 import java.util.HashMap;
@@ -57,38 +59,37 @@ public class GherkinPlanAssembler implements PlanAssembler {
 
 
 	@Override
-	public Optional<PlanNodeID> assemblePlan(org.myjtools.openbbt.core.plan.TagExpression tagExpression) {
-		return Optional.empty();
-/*		ResourceSet resourceSet = resourceFinder.findResources("*.feature");
+	public Optional<PlanNodeID> assemblePlan(TagExpression tagExpression) {
+		ResourceSet resourceSet = resourceFinder.findResources("*.feature");
 		if (resourceSet.size() == 1) {
-			return assembleFeatureNode(keywordMapProvider, parser, idTagPattern, resourceSet.get(0));
+			return assembleFeatureNode(keywordMapProvider, parser, idTagPattern, resourceSet.get(0), tagExpression);
 		} else {
-			return assembleMultipleFeature(resourceSet);
+			return assembleMultipleFeature(resourceSet, tagExpression);
 		}
-*/	}
+	}
 
 
-/*
-	private Optional<PlanNodeID> assembleMultipleFeature(ResourceSet resourceSet) {
 
-		var root = assembleStandaloneFeatures(resourceSet);
+	private Optional<PlanNodeID> assembleMultipleFeature(ResourceSet resourceSet, TagExpression tagExpression) {
+
+		var root = assembleStandaloneFeatures(resourceSet, tagExpression);
 
 		deleteDefinitionTestCasesWithoutId(root);
 		deleteImplementationScenarioOutlineContent(root);
-		fillImplementationScenarioOutlines(root);
+		fillImplementationScenarioOutlines(root, tagExpression);
 
 		// redefine definition test cases with implementation steps
 		repository.searchNodes(PlanNodeCriteria.and(
 			PlanNodeCriteria.descendantOf(root),
 			PlanNodeCriteria.withNodeType(NodeType.TEST_CASE),
 			PlanNodeCriteria.withTag(definitionTag)
-		)).forEach(it -> redefine(root,it));
+		)).forEach(definitionTestCase -> redefine(root,definitionTestCase));
 
-		root.getChildren(node ->
-				node.hasProperty(GHERKIN_TYPE,GHERKIN_TYPE_FEATURE) &&
-						node.hasTag(implementationTag)
-		).forEach(PlanNodeDAO::delete);
-
+		repository.searchNodes(PlanNodeCriteria.and(
+			PlanNodeCriteria.descendantOf(root),
+			PlanNodeCriteria.withProperty(GHERKIN_TYPE, GHERKIN_TYPE_FEATURE),
+			PlanNodeCriteria.withTag(implementationTag)
+		)).forEach(implementationFeature -> repository.deleteNode(implementationFeature));
 
 		repository.searchNodes(PlanNodeCriteria.and(
 			PlanNodeCriteria.descendantOf(root),
@@ -127,7 +128,7 @@ public class GherkinPlanAssembler implements PlanAssembler {
 	}
 
 
-	private PlanNodeID assembleStandaloneFeatures(ResourceSet resourceSet) {
+	private PlanNodeID assembleStandaloneFeatures(ResourceSet resourceSet, TagExpression tagExpression) {
 		log.trace("provideStandaloneFeatures");
 		var id = repository.persistNode(new PlanNode(NodeType.TEST_AGGREGATOR));
 		for (Resource resource : resourceSet) {
@@ -135,7 +136,8 @@ public class GherkinPlanAssembler implements PlanAssembler {
 				keywordMapProvider,
 				parser,
 				idTagPattern,
-				resource
+				resource,
+				tagExpression
 			).ifPresent(child -> repository.attachChildNodeLast(id, child));
 		}
 		return id;
@@ -152,123 +154,123 @@ public class GherkinPlanAssembler implements PlanAssembler {
 	}
 
 
-	private void fillImplementationScenarioOutlines(PlanNodeID root) {
+	private void fillImplementationScenarioOutlines(PlanNodeID root, TagExpression tagExpression) {
 		log.trace("fillImplementationScenarioOutlines");
 		repository.searchNodes(PlanNodeCriteria.and(
 			PlanNodeCriteria.descendantOf(root),
 			PlanNodeCriteria.withTag(implementationTag),
 			PlanNodeCriteria.withProperty(GHERKIN_TYPE, GHERKIN_TYPE_SCENARIO_OUTLINE)
-		)).forEach(scenarioOutline -> fillImplementationScenarioOutline(root, scenarioOutline));
+		)).forEach(scenarioOutline -> fillImplementationScenarioOutline(root, scenarioOutline, tagExpression));
 	}
 
 
 
-	private void fillImplementationScenarioOutlines(PlanNodeDAO root, PlanNodeDAO impScenarioOutline) {
+	private void fillImplementationScenarioOutline(PlanNodeID root, PlanNodeID impScenarioOutline, TagExpression tagExpression) {
 
-		PlanNodeDAO impFeature = impScenarioOutline.getParent().orElseThrow();
+		PlanNodeID impFeature = repository.getParentNode(impScenarioOutline).orElseThrow();
+		String identifier = repository.getNodeField(impScenarioOutline, "identifier").orElseThrow().toString();
 
-		PlanNodeDAO defScenarioOutline = root.findDescendants(and(
-				withNodeType(NodeType.AGGREGATOR),
-				withTag(definitionTag),
-				withProperty(GHERKIN_TYPE,GHERKIN_TYPE_SCENARIO_OUTLINE),
-				withField("id",impScenarioOutline.node().id())
+		PlanNodeID defScenarioOutline = repository.searchNodes(PlanNodeCriteria.and(
+			PlanNodeCriteria.descendantOf(root),
+			PlanNodeCriteria.withNodeType(NodeType.TEST_AGGREGATOR),
+			PlanNodeCriteria.withTag(definitionTag),
+			PlanNodeCriteria.withProperty(GHERKIN_TYPE, GHERKIN_TYPE_SCENARIO_OUTLINE),
+			PlanNodeCriteria.withField("identifier",identifier)
 		)).findFirst().orElseThrow(
-				() -> new WakamitiException(
-						"There is no definition scenario outline with id {id}",
-						impScenarioOutline.node().id()
-				)
+			() -> new OpenBBTException(
+				"There is no definition feature with name {}",
+				repository.getNodeField(impFeature, "name").orElseThrow()
+			)
 		);
 
-		Examples defExamples = ((ScenarioOutline) underlyingModels.get(defScenarioOutline.nodeID()))
-				.examples()
-				.get(0);
+		Examples defExamples = ((ScenarioOutline) underlyingModels.get(defScenarioOutline))
+			.examples()
+			.getFirst();
 
-		var stepsFromExamples = new FeaturePlanBuilder(
-				(Feature) underlyingModels.get(impFeature.nodeID()),
-				impFeature.node().source(),
-				keywordMapProvider,
-				idTagPattern,
-				repository
+		var stepsFromExamples = new FeaturePlanAssembler(
+			(Feature) underlyingModels.get(impFeature),
+			repository.getNodeField(impFeature, "source").map(Object::toString).orElse(""),
+			keywordMapProvider,
+			idTagPattern,
+			repository,
+			tagExpression
 		).createScenariosFromExamples(
-				(ScenarioOutline) underlyingModels.get(impScenarioOutline.nodeID()),
-				defExamples,
-				impScenarioOutline
+			(ScenarioOutline) underlyingModels.get(impScenarioOutline),
+			defExamples,
+			impScenarioOutline
 		);
 
-		stepsFromExamples.forEach(impScenarioOutline::attachChild);
+		stepsFromExamples.forEach(step -> repository.attachChildNodeLast(impScenarioOutline, step));
 
 	}
 
 
 
-	private void redefine(PlanNode root, PlanNode defTestCase) {
-		log.trace("redefine {}",defTestCase.nodeID());
-		implementationTestCase(root,defTestCase).ifPresentOrElse(
+	private void redefine(PlanNodeID root, PlanNodeID defTestCase) {
+		log.trace("redefine {}",defTestCase);
+		implementationTestCase(root, defTestCase).ifPresentOrElse(
 			impTestCase -> redefineTestCase(defTestCase, impTestCase),
-			defTestCase::delete
+			() -> repository.deleteNode(defTestCase)
 		);
 	}
 
 
-	private void redefineTestCase(PlanNode defTestCase, PlanNode impTestCase) {
+	private void redefineTestCase(PlanNodeID defTestCase, PlanNodeID impTestCase) {
 
 		// definition background is ignored
-		deleteBackground(defTestCase.nodeID());
+		deleteBackground(defTestCase);
 
-		int[] stepMap = extractStepMap(defTestCase.nodeID(), impTestCase.nodeID());
+		int[] stepMap = extractStepMap(defTestCase, impTestCase);
 
 		var impSteps = repository.searchNodes(PlanNodeCriteria.and(
-			PlanNodeCriteria.childOf(impTestCase.nodeID()),
+			PlanNodeCriteria.childOf(impTestCase),
 			PlanNodeCriteria.withNodeType(NodeType.STEP)
-		));
+		)).toList();
 
 
 		int defStepCount = 0;
 		int impStepCount = 0;
 
-		for (var defStep : defTestCase.getChildren()) {
+		for (PlanNodeID defStep : repository.getNodeChildren(defTestCase).toList()) {
 			for (int i = 0; i < stepMap[defStepCount]; i++) {
-				var impStep = impSteps.get(impStepCount);
-				impStep.getParent().ifPresent(impStepParent -> impStepParent.detachChild(impStep));
-				defStep.attachChild(impStep);
+				PlanNodeID impStep = impSteps.get(impStepCount);
+				repository.getParentNode(impStep).ifPresent(impStepParent -> repository.detachChildNode(impStepParent, impStep));
+				repository.attachChildNodeLast(defStep,impStep);
 				impStepCount++;
 			}
-			redefineStepNodeType(stepMap, defStepCount, defStep);
-			defStepCount++;
 		}
 
-		moveBackroundToOtherTestCase(impTestCase, defTestCase);
+		moveBackgroundToOtherTestCase(impTestCase, defTestCase);
 
 	}
 
 
 
-	private void redefineStepNodeType(int[] stepMap, int defStepCount, PlanNodeDAO defStep) {
+	private void redefineStepNodeType(int[] stepMap, int defStepCount, PlanNodeID defStep) {
 		if (stepMap[defStepCount] == 0) {
-			defStep.node().nodeType(NodeType.VIRTUAL_STEP);
+			repository.updateNodeField(defStep, "nodeType", NodeType.VIRTUAL_STEP.value);
 		} else {
-			defStep.node().nodeType(NodeType.STEP_AGGREGATOR);
+			repository.updateNodeField(defStep, "nodeType", NodeType.STEP_AGGREGATOR.value);
 		}
-		defStep.update();
 	}
 
 
-	private void moveBackroundToOtherTestCase(PlanNodeDAO origin,PlanNodeDAO target) {
-		origin.getChildren().stream()
-				.filter(it -> it.node().hasProperty(GHERKIN_TYPE, GHERKIN_TYPE_BACKGROUND))
-				.findFirst()
-				.ifPresent(originBackground -> {
-					origin.detachChild(originBackground);
-					target.attachChild(originBackground,0); // background always in first position
-					originBackground.node().name("<definition>");
-					originBackground.update();
-				});
+	private void moveBackgroundToOtherTestCase(PlanNodeID origin, PlanNodeID target) {
+		repository.searchNodes(PlanNodeCriteria.and(
+			PlanNodeCriteria.childOf(origin),
+			PlanNodeCriteria.withProperty(GHERKIN_TYPE, GHERKIN_TYPE_BACKGROUND)
+		)).findFirst().ifPresent(originBackground -> {
+			repository.detachChildNode(origin, originBackground);
+			repository.attachChildNodeFirst(target, originBackground); // background always in first
+			repository.updateNodeField(originBackground, "name", "<definition>");
+			}
+		);
 	}
 
 
 	private int[] extractStepMap(PlanNodeID defTestCase, PlanNodeID impTestCase) {
 		// step map is in form: x-x-x-x...
-		String stepMapProperty = repository.getNodeProperty(impTestCase, STEP_MAP).orElse(null);
+		String stepMapProperty = repository.getProperty(impTestCase, STEP_MAP).orElse(null);
 		if (stepMapProperty == null || stepMapProperty.isBlank()) {
 			// if not defiend, map 1-to-1 for each step
 			int defTestCaseChildren = repository.countNodeChildren(defTestCase);
@@ -285,13 +287,13 @@ public class GherkinPlanAssembler implements PlanAssembler {
 	}
 
 
-	private Optional<PlanNodeID> implementationTestCase(PlanNode root, PlanNode definitionTestCase) {
+	private Optional<PlanNodeID> implementationTestCase(PlanNodeID root, PlanNodeID definitionTestCase) {
 		return repository.searchNodes(PlanNodeCriteria.and(
-			PlanNodeCriteria.descendantOf(root.nodeID()),
+			PlanNodeCriteria.descendantOf(root),
 			PlanNodeCriteria.withNodeType(NodeType.TEST_CASE),
 			PlanNodeCriteria.withTag(implementationTag),
-			PlanNodeCriteria.withField("identifier",definitionTestCase.identifier())
-		)).findFirst();
+			PlanNodeCriteria.withField("identifier",repository.getNodeField(definitionTestCase,"identifier").orElseThrow()))
+		).findFirst();
 	}
 
 
@@ -300,7 +302,8 @@ public class GherkinPlanAssembler implements PlanAssembler {
 		DefaultKeywordMapProvider keywordMapProvider,
 		GherkinParser parser,
 		String idTagPattern,
-		Resource resource
+		Resource resource,
+		TagExpression tagExpression
 	) {
 		try (var inputStream = resource.open()) {
 			var gherkinDocument = parser.parse(inputStream);
@@ -312,9 +315,10 @@ public class GherkinPlanAssembler implements PlanAssembler {
 				resource.relativePath().toString(),
 				keywordMapProvider,
 				idTagPattern,
-				repository
+				repository,
+				tagExpression
 			);
-			var result = Optional.ofNullable(builder.createTestPlan());
+			var result = builder.createTestPlan();
 			this.underlyingModels.putAll(builder.underlyingModels());
 			return result;
 		} catch (RuntimeException | IOException e) {
@@ -324,5 +328,5 @@ public class GherkinPlanAssembler implements PlanAssembler {
 
 	}
 
-*/
+
 }
